# portfolio

./: README.md  pyproject.toml  run.nix  shell.nix
home/: urls.py  views.py
home/templates/home/: about.html  contact.html  creative-coding.html  games.html  home.html
home/templates/home/p5/: bouncing-balls.html  starfield.html  sudoku_backtrace.html  template.html  tictactoe.html  wave-function.html
portfolio/: settings.py  urls.py
static/css/: debug.css  layout.css  my-style.css
static/js/: bouncing-balls.js  p5-template.js  starfield.js  sudoku_backtrace.js  tictactoe.js  wave-function.js
templates/: base.html  boilerplate.html  color-mode-toggle.html  favicon.html  footer.html  how-to-use-these-templates.md  nav-examples.html  navbar.html  showcase.html  style.html
