[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["Adam Butler <adamjbutler091@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
fontawesomefree = "6.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
